# Fixit

./: .editorconfig  .fixit.config.yaml  .flake8  .gitignore  .lint.config.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyre_configuration  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  check_copyright.sh  makefile  pyproject.toml  pyrefly.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: tox_job.py
.github/workflows/: build.yml  ci.yml
docs/: api.rst  changelog.rst  code-of-conduct.rst  conf.py  contributing.rst  guide.rst  index.rst  integrations.rst  proposals.rst  quickstart.rst  rules.rst  upgrade.rst  why.rst
docs/_static/: custom.css
docs/_templates/: badges.html  meta.html
docs/guide/: builtins.rst  commands.rst  configuration.rst  integrations.rst  quickstart.rst
docs/proposals/: fp1.md  fp2.rst
docs/source/: api.rst  build_a_lint_rule.ipynb  conf.py  configure_repo.rst  contributing.rst  getting_started.ipynb  getting_started.rst  index.rst  lib.py  test_a_lint_rule.ipynb  why_fixit.rst
docs/source/_static/: custom.css
examples/: noop.py
examples/basic/: custom_object.py
examples/teambread/: pyproject.toml
examples/teambread/rules/: hollywood.py
examples/teambread/sourdough/: baker.py
fixit/: .lint.config.yaml  __init__.py  __main__.py  _version.py  cli.py  rule_lint_engine.py  types.py
fixit/cli/: __init__.py  add_new_rule.py  apply_fix.py  args.py  formatter.py  full_repo_metadata.py  insert_suppressions.py  main.py  run_rules.py  utils.py
fixit/cli/tests/: test_args.py  test_formatter.py  test_ipc.py  test_lint_opts.py  test_type_inference.py
fixit/common/: autofix.py  base.py  config.py  config.schema.json  document.py  flake8_compat.py  full_repo_metadata.py  generate_pyre_fixtures.py  ignores.py  insert_suppressions.py  line_mapping.py  report.py  testing.py  unused_suppressions.py  utils.py
fixit/common/cli/: __init__.py  apply_fix.py  args.py  full_repo_metadata.py  init_config.py  insert_suppressions.py  run_rules.py  test_rule.py  test_rules.py  utils.py
fixit/common/tests/: .fixit.config.yaml  test_autofix.py  test_comments.py  test_config.py  test_flake8_compat.py  test_full_repo_metadata.py  test_get_code.py  test_ignores.py  test_imports.py  test_insert_suppressions.py  test_line_mapping.py  test_pseudo_rule.py  test_report.py  test_rules.py  test_unused_suppressions.py
fixit/common/typing/: helpers.py
fixit/legacy/: _version.py
fixit/legacy/cli/: __init__.py  args.py
fixit/legacy/common/: line_mapping.py
fixit/legacy/rules/: cls_in_classmethod.py  no_redundant_list_comprehension.py  rewrite_to_literal.py
fixit/rules/: add_file_header.py  avoid_or_in_except.py  await_async_call.py  chained_instance_check.py  cls_in_classmethod.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  explicit_frozen_dataclass.py  flake8_compat.py  gather_sequential_await.py  import_constraints.py  new_rule.py  no_assert_equals.py  no_assert_true_for_comparison.py  no_implicit_concat.py  no_inherit_from_object.py  no_namedtuple.py  no_redundant_arguments_super.py  no_redundant_fstring.py  no_redundant_lambda.py  no_static_if_condition.py  no_string_type_annotation.py  no_unnecessary_fstring.py  remove_unused_suppressions.py  replace_union_with_optional.py  rewrite_to_comprehension.py  rewrite_to_literal.py  sorted_attributes_rule.py  unnecessary_list_comprehension.py  use_assert_in.py  use_assert_is_not_none.py  use_classname_as_code.py  use_fstring.py  use_is_none_on_optional.py  use_lint_fixme_comment.py  use_printf_logging.py  use_types_from_typing.py
fixit/tests/: __init__.py  smoke.py  test_import_constraints.py  test_rule_lint_engine.py  test_rules.py
fixit/tests/helpers/: pyre_types.json
fixit/tests/pyre/: helper_script.py
legacy/: __init__.py  _version.py  rule_lint_engine.py
legacy/cli/: __init__.py  add_new_rule.py  apply_fix.py  args.py  formatter.py  full_repo_metadata.py  init_config.py  insert_suppressions.py  main.py  run_rules.py  utils.py
legacy/cli/tests/: test_args.py  test_formatter.py  test_ipc.py  test_lint_opts.py  test_type_inference.py
legacy/common/: autofix.py  base.py  comments.py  config.py  document.py  flake8_compat.py  full_repo_metadata.py  generate_pyre_fixtures.py  ignores.py  insert_suppressions.py  line_mapping.py  pseudo_rule.py  report.py  testing.py  unused_suppressions.py  utils.py
legacy/common/cli/: __init__.py  args.py  formatter.py
legacy/common/tests/: test_autofix.py  test_comments.py  test_config.py  test_flake8_compat.py  test_full_repo_metadata.py  test_get_code.py  test_ignores.py  test_imports.py  test_insert_suppressions.py  test_line_mapping.py  test_pseudo_rule.py  test_report.py  test_unused_suppressions.py
legacy/rules/: add_file_header.py  avoid_or_in_except.py  await_async_call.py  flake8_compat.py  gather_sequential_await.py  import_constraints.py  no_implicit_concat.py  no_static_if_condition.py  use_fstring.py  use_is_none_on_optional.py
legacy/tests/: __init__.py  test_import_constraints.py  test_rule_lint_engine.py
local/: copyright.py
scripts/: check_copyright.py  document_rules.py  migrate_rule_to_fixit2.py
src/fixit/: __init__.py  __main__.py  api.py  cli.py  comments.py  config.py  engine.py  format.py  ftypes.py  lsp.py  rule.py  testing.py  types.py  util.py
src/fixit/local/: __init__.py
src/fixit/rule/: __init__.py  cst.py
src/fixit/rules/: __init__.py  avoid_or_in_except.py  chained_instance_check.py  cls_in_classmethod.py  collections_abc_import_update.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  deprecated_abc_import.py  deprecated_unittest_asserts.py  explicit_frozen_dataclass.py  fixit.toml  no_assert_equals.py  no_assert_true_for_comparison.py  no_inherit_from_object.py  no_namedtuple.py  no_redundant_arguments_super.py  no_redundant_fstring.py  no_redundant_lambda.py  no_redundant_list_comprehension.py  no_static_if_condition.py  (+18 more)
(+122 files in other folders)
