[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fixit"
readme = "README.rst"
authors = [
    {name="Meta Platforms, Inc"},
    {name="Amethyst Reese"},
    {name="Jimmy Lai"},
    {name="Zsolt Dollenstein"},
]
license = {file="LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

requires-python = ">=3.8"
dependencies = [
    "click >= 8.0",
    "libcst >= 0.3.18",
    "moreorless >= 0.4.0",
    "packaging >= 21",
    "tomli >= 2.0; python_version < '3.11'",
    "trailrunner >= 1.2",
]

dynamic = ["version"]
description = "A lint framework that writes better Python code for you."

[project.optional-dependencies]
docs = [
    "jinja2 == 3.1.2",
    "sphinx == 7.0.1",
    "sphinx-mdinclude == 0.5.3",
]
dev = [
    "attribution == 1.6.2",
    "black == 23.12.1",
    "flake8 == 6.1.0",
    "flake8-bugbear == 24.1.16",
    "mypy == 1.8.0",
    "ufmt == 2.3.0",
    "usort == 1.0.8.post1",
]
pretty = [
    "rich >= 12.6.0",
]

[project.scripts]
fixit = "fixit.cli:main"

[project.urls]
Home = "https://fixit.rtfd.io"
Github = "https://github.com/Instagram/Fixit"
Changelog = "https://github.com/Instagram/Fixit/blob/main/CHANGELOG.md"

[tool.black]
target-version = ["py37"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fixit/__version__.py"

[tool.hatch.build]
exclude = [
    "/.github",
    "/examples",
    "/legacy",
]

[tool.hatch.envs.all]
features = ["dev", "docs", "pretty"]

[tool.hatch.envs.default]
features = ["dev", "pretty"]

[tool.hatch.envs.default.scripts]
test = "python -m fixit.tests"
typecheck = "mypy --install-types --non-interactive src/fixit"

[tool.hatch.envs.lint.scripts]
check = [
    "flake8 src/fixit scripts",
    "fixit lint src/fixit scripts",
    "ufmt check src/fixit scripts",
    "python scripts/check_copyright.py",
]
fix = [
    "fixit fix --automatic src/fixit scripts",
    "ufmt format src/fixit scripts",
]

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = [
    "python scripts/document_rules.py",
    "sphinx-build -a -b html docs html",
]

[tool.fixit]
enable = ["fixit.rules"]
python-version = "3.10"
formatter = "ufmt"

[[tool.fixit.overrides]]
path = "examples"
enable = [".examples.noop"]

[tool.attribution]
name = "Fixit"
package = "fixit"
signed_tags = true
version_file = false
ignored_authors = ["dependabot"]
