[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fixit"
readme = "README.rst"
authors = [
    {name="Meta Platforms, Inc"},
    {name="Amethyst Reese"},
    {name="Jimmy Lai"},
    {name="Zsolt Dollenstein"},
]
license = {file="LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

requires-python = ">=3.9"
dependencies = [
    "click >= 8.0, < 8.2",
    "libcst >= 0.3.18",
    "moreorless >= 0.4.0",
    "packaging >= 21",
    "tomli >= 2.0; python_version < '3.11'",
    "trailrunner >= 1.2",
]

dynamic = ["version"]
description = "A lint framework that writes better Python code for you."

[project.optional-dependencies]
docs = [
    "jinja2 == 3.1.6",
    "sphinx == 8.0.2",
    "sphinx-mdinclude == 0.6.2",
]
dev = [
    "attribution == 1.8.0",
    "black == 25.1.0",
    "build > 1",
    "flake8 == 7.3.0",
    "flake8-bugbear == 24.12.12",
    "mypy == 1.17.0",
    "ufmt == 2.8.0",
    "usort == 1.0.8.post1",
    "pyrefly == 0.26.0",
]
lsp = [
    "pygls[ws] ~= 1.3.1",
]
pretty = [
    "rich >= 12.6.0",
]

[project.scripts]
fixit = "fixit.cli:main"

[project.urls]
Home = "https://fixit.rtfd.io"
Github = "https://github.com/Instagram/Fixit"
Changelog = "https://github.com/Instagram/Fixit/blob/main/CHANGELOG.md"

[tool.attribution]
name = "Fixit"
package = "fixit"
signed_tags = true
version_file = false
ignored_authors = ["dependabot"]

[tool.black]
target-version = ["py38"]

[tool.fixit]
enable = ["fixit.rules"]
python-version = "3.10"
formatter = "ufmt"

[[tool.fixit.overrides]]
path = "examples"
enable = [".examples.noop"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/fixit/__version__.py"

[tool.hatch.build]
exclude = [
    "/.github",
    "/examples",
    "/legacy",
]

[tool.mypy]
strict = true
python_version = "3.8"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pyrefly]
project_includes = [
    # Start by adding a single file and we'll expand as we go
    "src/fixit/util.py"
]
search_path = [
    "src"
]
python_version = "3.12"
